Fixed "Live" icon being behind the video

--- a/web/frontend/css/main.css
+++ b/web/frontend/css/main.css
@@ -101,6 +101,7 @@ main {
         position: absolute;
         top: var(--spacing-sm);
         left: var(--spacing-sm);
+        z-index: 10;
 
         background-color: #ef4444;
         color: #ffffff;
